--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  
 }
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
